[metadata]
name = firebolt_sqlalchemy
version = 0.0.9
description = Sqlalchemy adapter for Firebolt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/firebolt-db/firebolt-sqlalchemy
author = Firebolt
author_email = pypi@firebolt.io
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
download_url = https://github.com/firebolt-db/firebolt-sqlalchemy/archive/refs/tags/0.0.9.tar.gz
entry_points =
    sqlalchemy.dialects :
    firebolt = firebolt_db.firebolt_dialect:FireboltDialect
project_urls =
    Bug Tracker = https://github.com/firebolt-db/firebolt-sqlalchemy

[options]
packages = find:
install_requires =
    firebolt-sdk
    sqlalchemy>=1.0.0
python_requires = >=3.6
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
dev =
    devtools==0.7.0
    mypy==0.910
    pre-commit==2.15.0
    pytest==6.2.5
    sqlalchemy-stubs

[mypy]
disallow_untyped_defs = True
show_error_codes = True
plugins = sqlmypy

[pydantic-mypy]
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[flake8]
max-line-length = 88
per-file-ignores = __init__.py:F401
ignore = E203, W503
ban-relative-imports = True
inline-quotes = "
